# pymcc

./: .gitignore  .project  CMakeLists.txt  MANIFEST.in  README.md  __init__.py  setup.py
libmcc/: CMakeLists.txt  IInterpolationRegion.h  IRasterSurface.h  InterpolationRegion.cpp  InterpolationRegion.h  LocaleUtilities.h  Makefile  PointIO.cpp  PointIO.h  PointSelector.h  Sequence.h  SplineExceptions.h  cmake_install.cmake  mcc-lidar-iteration
libmcc-lidar/: CMakeLists.txt  CoordinateInterval.cpp  FindLibLAS.cmake  IClassificationVector.h  IDataFormat.h  IUnclassifiedPoints.h  Makefile  PointCsvFile.cpp  PointVectorIterator.h  RegularizedSpline.h  UnclassifiedPoints.h  VectorWrapper.h  XyzPoint.h  cmake_install.cmake  config.h.in
libmcc-lidar/fusion/: CMakeLists.txt  DataFile.cpp  LASFormatFile.cpp
libmcc-lidar/package/win/: Documentation.txt
libmcc-lidar/tpsdemo/: linalg3d.cpp
libmcc/fusion/: DataIndex.cpp  DataIndex.h  LidarData.h
libmcc/package/win/: create_shortcut.nsh
libmcc/tpsdemo/: README.txt
libmcc_lidar/: Algorithm.cpp  Algorithm.h  AsciiGrid.h  BinaryFile.cpp  BinaryFile.h  CMakeLists.txt  DisjointRegions.cpp  DisjointRegions.h  DuplicatePoints.cpp  IInterpolationRegion.h  IRegionGenerator.h  InterpolationRegion.cpp  InterpolationRegion.h  LasDataReader.cpp  LineIndent.cpp  LineIndent.h  Point.h  PointSelector.h  PointVector.h  PointVectorIteratorImpl.h  RasterSurface.h  RegularizedSpline.cpp  RegularizedSpline.h  StackedPoints.cpp  SurfaceInterpolation.cpp  SurfaceInterpolation.h  VersionControl.cmake  VersionRelease.cmake  cmake_install.cmake
libmcc_lidar/include/: enums.h  mcc.h
libmcc_lidar/package/win/: delete_shortcut.nsh
libmcc_lidar/src/: mcc.cpp
libmcc_lidar/tpsdemo/: Makefile-osx  gaussseidel.h  ludecomposition.h  solvers.h  spline.cpp  spline.h
mcc/: Algorithm.cpp  Algorithm.h  CMakeLists.txt  CPackConfig.cmake  Cell.h  CellBlock.h  Coordinate.h  DisjointRegions.h  Geometry3D.cpp  Grid.h  GridBase.cpp  IDataFormat.h  IPoint.h  ISurfaceInterpolation.h  LasDataFormat.cpp  LasDataFormat.h  LasDataReader.h  Makefile  OutputCsvFile.cpp  Point.h  PointCsvFile.cpp  PointCsvFile.h  ProgramExceptions.h  ProgramParameters.h  SurfaceInterpolation.cpp  SurfaceInterpolation.h  UnclassifiedPoints.h  Win32StructuredException.cpp  XYCoordinates.h  main.cpp  mcc-lidar-openmp  mcc-lidar-serial-test
mcc/fusion/: DataFile.h
mcciter/: Algorithm.cpp  Algorithm.h  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackOptions.cmake  CPackSourceConfig.cmake  CoordinateInterval.h  DuplicatePoints.h  Geometry3D.h  GridBase.h  IPoint.h  IPointVector.h  IRegionGenerator.h  IXyzPointReader.h  LasXyzPoint.h  LocaleUtilities.cpp  Makefile  OutputCsvFile.h  PointCanopyHeightFile.cpp  PointCanopyHeightFile.h  PointClassification.h  PointVector.cpp  ProgramParameters.cpp  ProgressBar.cpp  ProgressBar.h  README.txt  RasterSurface.cpp  RegularizedSpline.cpp  StackedPoints.h  UnclassifiedPoints.cpp  Win32StructuredException.h  XyExtent.h  cmake_install.cmake  config.h  main.cpp
mcciter/fusion/: LASFormatFile.h  LidarData.cpp  README.txt
mcciter/include/: mcc.h
mcciter/package/: CPackOptions.cmake.in
mcciter/package/win/: set_path.bat
mcciter/src/: mcc.cpp
mcciter/tpsdemo/: linalg3d-double.h  main.cpp  spline.cpp
python/: CMakeLists.txt  pymcc-lidar.pyx  pymcc.pxd  pymcc_lidar.pxd  pymcc_lidar.pyx  pymccp.cpp  pymccp.h
python/cmake/: FindCython.cmake  ReplicatePythonSourceTree.cmake  UseCython.cmake
tests/: check-subsample.ipynb  orthogonal.hpp  test-full-mcc.ipynb  test-solvers.ipynb
tests/data/: points_rgb.csv  points_rgb.las  points_rgb.laz
tests/output/: height_1iter_s1_t0_3_donothing.npy  height_1iter_s1_t0_3_gs_1000iter_addeps.npy  height_1iter_s1_t0_3_gs_1000iter_noreg.npy  height_1iter_s1_t0_3_gs_1000iter_reg0_01.npy  height_1iter_s1_t0_3_gs_100iter_addeps.npy  height_1iter_s1_t0_3_lu.npy  height_1iter_s1_t0_3_lu_notinplace.npy  labels_s1_t0_3_donothing.npy  labels_s1_t0_3_gs_1000iter_addeps.npy  labels_s1_t0_3_gs_1000iter_noreg.npy  labels_s1_t0_3_gs_1000iter_reg0_01.npy  labels_s1_t0_3_gs_100iter_addeps.npy  labels_s1_t0_3_lu.npy  labels_s1_t0_3_lu_notinplace.npy
